Development
	Code cleanup around optional components
	Work on tooltip flickering more, seems that when any tooltip is updated, the visible tooltip is
		redrawn. May be a bug in GTK, but another app I am working on does not have this issue
	Add configure option --with-dbus/--without-dbus so that gnome-mplayer can be compiled without dbus
	Added VDPAU to the list of devices that ok to fail 
		(found on Ubuntu mailing list, but never a bug opened or brought to my attention otherwise)
	Use keyboard key 'd' to toggle framedropping mode
	Run make indent on source
	Enable compile with --enable-gseal (GTK3 prep)
	Try to prevent and isolate GTK assertions
	Rework code that ensures that a window id is available for mplayer to use
	Change warnings to notices in configure
	Fix detection of PA and GPM so errors are not emitted when not found
	Set the MEDIAENDED state correctly when running as plugin
	Disable mplayer softvol when AC3 is enabled Issue #468
	More window size fixes Issue #467
	Allow seeking in streaming media when mplayer says it is seekable Issue #443
	Add option to allow mouse wheel to change volume vs seeking Issue #414 (partial)
	Change tooltip timeout from default of 500 to 0 (no timeout) should fix Issue #446
	Remove files from playlist, that are not playable on folder load
	Only create status icon when needed Issue #465
	Fix the window filling to the right on playlist reveal Issue #463
	Better window size allocation when showing optional panes Issue #463
	Allow loading a separate audio track when playing a video with Edit > Set Audio Issue #423
	Rework goto/return from fullscreen code 
	Support LIBNOTIFY 0.7 and higher bug #454
	Fix compile on GTK 2.12
	Update Lithuaninan translation bug #458
	Apply patch from bug #457
	Make audio meter display db values, based on af_stats plugin from mplayer
	Revert parts of the update technique, it made the gui crash, cpu usage is still lower